# hookeai

./: .buildinfo  .coveragerc  LICENSE  README.md  api.html  environment.yml  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: api.doctree  index.doctree  license.doctree
_autosummary/: hookeai.data_generation.html  hookeai.data_generation.spdg.html  hookeai.data_generation.spdg.patch.FiniteElement.html  hookeai.data_generation.spdg.patch.FiniteElementPatch.html  hookeai.data_generation.spdg.patch.html  hookeai.data_generation.spdg.patch.mean_rotation_angle_2d.html  hookeai.data_generation.spdg.patch.new_file_path_with_int.html  hookeai.data_generation.spdg.patch.rotation_angle_2d.html  hookeai.data_generation.spdg.patch_generator.FiniteElement.html  hookeai.data_generation.spdg.patch_generator.FiniteElementPatch.html  hookeai.data_generation.spdg.patch_generator.FiniteElementPatchGenerator.html  hookeai.data_generation.spdg.patch_generator.html  hookeai.data_generation.spdg.patch_generator.rotation_tensor_from_euler_angles.html  hookeai.data_generation.strain_paths.html  hookeai.data_generation.strain_paths.interface.ABC.html  hookeai.data_generation.strain_paths.interface.StrainPathGenerator.html  hookeai.data_generation.strain_paths.interface.abstractmethod.html  hookeai.data_generation.strain_paths.interface.html  hookeai.data_generation.strain_paths.interface.plot_boxplots.html  hookeai.data_generation.strain_paths.interface.plot_histogram.html  hookeai.data_generation.strain_paths.interface.plot_histogram_2d.html  hookeai.data_generation.strain_paths.interface.plot_xy_data.html  hookeai.data_generation.strain_paths.interface.save_figure.html  hookeai.data_generation.strain_paths.interface.scatter_xy_data.html  hookeai.html  (+904 more)
(+3609 files in other folders)
