[metadata]
name = bessapypitemplate
version = file: VERSION
author = Bernardo Ferreira
author_email = bernardoferreiraacc@gmail.com
description = Generate material patch data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = materials, data
url = https://github.com/BernardoFerreira/gen_material_patch_data
license = BSD-3-Clause License
license_files = file: LICENSE
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt


[options.packages.find]
where=src